--- a/qspay/src/main/AndroidManifest.xml
+++ b/qspay/src/main/AndroidManifest.xml
@@ -13,22 +13,46 @@
     <uses-permission android:name="org.simalliance.openmobileapi.SMARTCARD" />
 
     <application android:label="@string/app_name">
-        <!-- alipay sdk begin -->
 
-        <!--<activity-->
-        <!--android:name="com.alipay.sdk.app.H5PayActivity"-->
-        <!--android:configChanges="orientation|keyboardHidden|navigation|screenSize"-->
-        <!--android:exported="false"-->
-        <!--android:screenOrientation="behind"-->
-        <!--android:windowSoftInputMode="adjustResize|stateHidden" />-->
-        <!--<activity-->
-        <!--android:name="com.alipay.sdk.app.H5AuthActivity"-->
-        <!--android:configChanges="orientation|keyboardHidden|navigation"-->
-        <!--android:exported="false"-->
-        <!--android:screenOrientation="behind"-->
-        <!--android:windowSoftInputMode="adjustResize|stateHidden" />-->
+        <!--===================== alipay sdk begin=====================-->
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
-        <!-- alipay sdk end -->
+        <activity
+            android:name="com.alipay.sdk.app.H5PayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize"
+            android:exported="false" />
+
+        <activity
+            android:name="com.alipay.sdk.app.H5AuthActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize"
+            android:exported="false" />
+        <activity
+            android:name="com.alipay.sdk.app.PayResultActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize"
+            android:exported="true"
+            android:launchMode="singleInstance"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.alipay.sdk.app.AlipayResultActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:name="com.alipay.sdk.app.H5OpenAuthActivity"
+            android:configChanges="orientation|keyboardHidden|navigation|screenSize"
+            android:exported="false"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+
+        <!--===================== alipay sdk end======================= -->
 
         <!-- 不能指定屏幕方向 8.0系统报错 -->
         <!--        <activity-->
