--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
         flatDir {
             dirs 'libs', '../qspay/libs'
