--- a/wxpay/src/main/AndroidManifest.xml
+++ b/wxpay/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qinsong.qspay.wxpay" />
+    package="com.qinsong.qspay.wxpay">
+
+
+<!--    <queries>-->
+<!--        <package android:name="com.tencent.mm" />-->
+<!--    </queries>-->
+
+</manifest>
