--- a/uppay/build.gradle
+++ b/uppay/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.library'
-
+// JitPack Maven
+apply plugin: 'com.github.dcendents.android-maven'
+// Your Group
+group = 'com.github.tohodog'
 android {
     compileSdkVersion 29
-    buildToolsVersion "30.0.3"
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 16
