--- a/uppay/build.gradle
+++ b/uppay/build.gradle
@@ -6,7 +6,7 @@ group = 'com.github.tohodog'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-//    ndkVersion "22.0.7026061"
+    ndkVersion "21.1.6352462"
 
     defaultConfig {
         minSdkVersion 16
